@startuml security_data_model
hide circle
skinparam linetype ortho
skinparam backgroundcolor #FEFEFE

title Modelo de Datos de Seguridad

entity "usuarios" as usuarios {
  *id : BIGINT <<PK>>
  --
  correo : VARCHAR(255) <<UNIQUE>>
  password_hash : VARCHAR(255)
  nombre : VARCHAR(100)
  apellido : VARCHAR(100)
  telefono : VARCHAR(50)
  **rol : VARCHAR(30)**
  activo : BOOLEAN
  creado_en : TIMESTAMP
  actualizado_en : TIMESTAMP
}

entity "refresh_tokens" as refresh {
  *id : BIGINT <<PK>>
  --
  usuario_id : BIGINT <<FK>>
  token : VARCHAR(500) <<UNIQUE>>
  fecha_expiracion : TIMESTAMP
  creado_en : TIMESTAMP
  revocado : BOOLEAN
}

entity "token_blacklist" as blacklist {
  *id : BIGINT <<PK>>
  --
  token : VARCHAR(500) <<UNIQUE>>
  usuario_id : BIGINT <<FK>>
  razon : VARCHAR(100)
  blacklisted_en : TIMESTAMP
}

usuarios ||--o{ refresh : "tiene"
usuarios ||--o{ blacklist : "revoca"

note right of usuarios
  **Roles permitidos:**
  - ADMIN
  - DOCENTE
  - APODERADO
  - ESTUDIANTE
  
  **Password:**
  - Hash BCrypt (rounds=10)
  - Nunca se almacena en texto plano
end note

note bottom of refresh
  **Propósito:**
  - Renovar JWT sin pedir credenciales
  - Validez: 7 días (más largo que JWT)
  - Un usuario puede tener múltiples refresh tokens
  - Se revoca en logout
end note

note bottom of blacklist
  **Propósito:**
  - Invalidar JWT antes de expiración
  - Casos: logout, cambio de password, compromiso
  - Gateway valida contra esta tabla
  - Limpieza periódica de tokens expirados
end note

@enduml
